--- a/Sebastian_Nicholas_Hello.html
+++ b/Sebastian_Nicholas_Hello.html
@@ -1,2 +1,4 @@
-Hello from Nicholas!
-Hello from Nick (Test back to VS)
+<html>
+    <b>Hello from Nicholas Sebastian!</b>
+</html>
+    Hello from Nick (Test back to VS)
