--- a/Lab2/static/SmartPhoneProducts1/index.html
+++ b/Lab2/static/SmartPhoneProducts1/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Used Smart Phone Store</h1>
     <img src="Picture1.jpg" height="50%" width="50%">
-    <a href="Come In"> <h1>Click the image to enter store!</h1></a>
+    <a href="products_display.html"></a>
+    <h1>Click the image to enter store!</h1>
 </body>
 </html>
