--- a/Lab2/static/SmartPhoneProducts1/store.html
+++ b/Lab2/static/SmartPhoneProducts1/store.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Nicholas Sebastian Used Smart Phone Store</h1>
     
-   
+    <a href="Images/phone_globe.jpg"><h1>Click the image to enter store</h1></a>
 </body>
 </html>
