--- a/Lab2/static/SmartPhoneProducts1/products_display.html
+++ b/Lab2/static/SmartPhoneProducts1/products_display.html
@@ -19,6 +19,7 @@
 
         <body>
             <h1>Used Smart Phone Store</h1>
+            <a href="Images/phone_globe.jpg"><h1>Click the image to enter store</h1></a>
         </body>
         </html>
 
