--- a/Lab2/static/SmartPhoneProducts1/products_display.html
+++ b/Lab2/static/SmartPhoneProducts1/products_display.html
@@ -23,7 +23,7 @@
         </body>
         </html>
 
-        <div><main></main>
+        <div>
             <section class="item"> 
                
                 <h2>HTC</h2>
