--- a/Lab2/static/SmartPhoneProducts1/products_display.html
+++ b/Lab2/static/SmartPhoneProducts1/products_display.html
@@ -10,7 +10,7 @@
         </head>
         <body>
             <h1>Nick's Used Smart Phone Store</h1>
-            <a href="Images/phone_globe.jpg"><h1>Click the image to enter store</h1></a>
+            <a href="Images/phone_globe.jpg"><h1>Click here to enter store</h1></a>
         <div><main>
             <section class="item"> 
                 <h2>HTC</h2>
@@ -46,20 +46,7 @@
         <h2>Your One Stop Phone Shop</h2>
 
         </body>
-        </html>
+        
     </head>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </html>
