--- a/Lab3/hello.html
+++ b/Lab3/hello.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        document.write(new Date());
-    </script>
+    <p id="demo">Hello World!</p>
 </body>
 </html>
