--- a/Lab5/SmartPhoneProducts1_3/products_display.html
+++ b/Lab5/SmartPhoneProducts1_3/products_display.html
@@ -14,6 +14,8 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Smartphone Products</title>
+
+
         </head>
            
         <body onload="">
@@ -27,32 +29,34 @@
                 </header>
 
                 <a href="Images/phone_globe.jpg"><h1>Click here to enter store</h1></a>
-                <div><main>
-                <section class="item"> 
+
+
+            <div><main>
+                <section class="item" onclick="hits ++; hits_span.innerHTML = hits;" onmouseover="spins ++; spins_span.innerHTML = spins;"> 
                     <h2>HTC</h2>
                     <p>&dollar; 40.00 </p>
                     <img src="http://dport96.github.io/ITM352/morea/080.flow-control-II/HTC.jpg">
                 </section>
 
-                <section class="item" onclick="hits_span.innerHTML - hits;" onmouseover="spins_span.innerHTML - spins;">
+                <section class="item" onclick="hits ++; hits_span.innerHTML = hits;" onmouseover="spins ++; spins_span.innerHTML = spins;">
                     <h2>Apple</h2>
                     <p>&dollar;75.00</p>
                     <img src="http://dport96.github.io/ITM352/morea/080.flow-control-II/iphone-3gs.jpg">
                 </section>
 
-                <section class="item" onclick="hits_span.innerHTML - hits;" onmouseover="spins_span.innerHTML - spins;">
+                <section class="item" onclick="hits ++; hits_span.innerHTML = hits;" onmouseover="spins ++; spins_span.innerHTML = spins;">
                     <h2>Nokia</h2>
                     <p>&dollar;35.00</p>
                     <img src="http://dport96.github.io/ITM352/morea/080.flow-control-II/Nokia.jpg">
                 </section>
 
-                <section class="item" onclick="hits_span.innerHTML - hits;" onmouseover="spins_span.innerHTML - spins;">              
+                <section class="item" onclick="hits ++; hits_span.innerHTML = hits;" onmouseover="spins ++; spins_span.innerHTML = spins;">              
                     <h2>Samsung</h2>
                     <p>&dollar;45.00</p>
                     <img src="http://dport96.github.io/ITM352/morea/080.flow-control-II/Samsung.jpg">
                 </section>
 
-                <section class="item" onclick="hits_span.innerHTML - hits;" onmouseover="spins_span.innerHTML - spins;"> 
+                <section class="item" onclick="hits ++; hits_span.innerHTML = hits;" onmouseover="spins ++; spins_span.innerHTML = spins;"> 
                     <h2>Blackberry</h2>
                     <p>&dollar;10.00</p>
                     <img src="http://dport96.github.io/ITM352/morea/080.flow-control-II/Blackberry.jpg">
