--- a/Lab8/Invoice1/invoice.html
+++ b/Lab8/Invoice1/invoice.html
@@ -3,10 +3,19 @@
 This file is made to contain different product sales prices and quantities. This also calculates tax values into the purchases.
 */
 
+
+var product_quantities = [2,1,1,3,12];
+
+
+
 // Product 1
-var item1 = 'iPhone 7';
-var quantity1 = 2;
-var price1 = 47.95;
+var product1 = {
+'item_name' :'iPhone 7',
+'price' : 47.95, 
+"quantity" :2 }; 
+product1.quantity = 0;
+ //product1 ['quantity'] = 0;
+
 
 // Product 2
 var item1 = 'Barbasol Shaving Cream';
@@ -29,7 +38,7 @@ var quantity1 = 12;
 var price1 = 1.89;
 
 // Compute extended prices
-var extended_price1 = quantity1*price1;
+var extended_price1 = product1['quantity']*product1['price1'];
 var extended_price2 = quantity2*price2;
 var extended_price3 = quantity3*price3;
 var extended_price4 = quantity4*price4;
@@ -46,9 +55,6 @@ var taxtotal = tax*subtotal;
 var total = subtotal + taxtotal;
 
 </script>
-
-
-
 
 <!DOCTYPE html>
 <html lang="en">
@@ -68,12 +74,19 @@ var total = subtotal + taxtotal;
               <th style="text-align: center;" width="13%">price</th>
               <th style="text-align: center;" width="54%">extended price</th>
             </tr>
+            <script>
+            // Product row 1
+            document.write(`
             <tr>
-              <td width="43%">Gillette Sensor 3 Razor</td>
-              <td align="center" width="11%">2</td>
-              <td width="13%">$1.23</td>
-              <td width="54%">$2.46</td>
+              <td width="43%">${product.item_name}</td>
+              <td align="center" width="11%">${product1.quantity}</td>
+              <td width="13%">$${product1.price}</td>
+              <td width="54%">$${extended_price1}</td>
             </tr>
+            `)
+
+            // Product row 2
+            document.write(`
             <tr>
               <td width="43%">Barbasol Shaving Cream</td>
               <td align="center" width="11%">1</td>
@@ -113,7 +126,11 @@ var total = subtotal + taxtotal;
               <td style="text-align: center;" colspan="3" width="67%"><strong>Total</strong></td>
               <td width="54%"><strong>$39.01</strong></td>
             </tr>
+            `)
+
+            </script>
           </tbody>
+          
         </table>
         
         </div>
