--- a/Lab10/Ex3.html
+++ b/Lab10/Ex3.html
@@ -1,4 +1,4 @@
-<span id="firstname">Rick</span>, <span id="lastname">Port</span>
+<span id="firstname">Nick</span>, <span id="lastname">Sebastian</span>
 <br>
 <input type="button" value="Swap" 
     onclick="
