--- a/Lab11/display_purchase.html
+++ b/Lab11/display_purchase.html
@@ -1,3 +1,4 @@
 <script>
-    
+    let params = (new URL(document.location)).searchParams;
+    document.write(params.get("qty_textbox1") )
 </script>
