--- a/Lab11/order_page.html
+++ b/Lab11/order_page.html
@@ -22,18 +22,20 @@
         document.getElementById(the_textbox.id + "_message").innerHTML = errs.join(',');
     }
 
+    // function checks for errors & non-negative integers 
     function isNonNegInt(q, returnErrors=false) {
     errors = []; 
-    if(Number(q) != q) errors.push('Not a number!'); 
-    else {
-        if(q < 0) errors.push('Negative value!'); 
-        if(parseInt(q) != q) errors.push('Not an integer!'); 
+        if(Number(q) != q) errors.push('Not a number!'); 
+            else {
+                if(q < 0) errors.push('Negative value!'); 
+                    if(parseInt(q) != q) errors.push('Not an integer!'); 
     }   
     return (returnErrors ? errors : (errors.length == 0));
 }
-var displayPurchase = function() {
-    if(isNonNegInt(qty_textbox1) == true) {
-    document.write(`Thank your for purchasing ${qty_textbox1.value} things!`)
+    // checks to display only positive integers 
+    var displayPurchase = function() {
+        if(isNonNegInt(qty_textbox1) == true) {
+        document.write(`Thank your for purchasing ${qty_textbox1.value} things!`)
     }
 }
 </script>
