--- a/Lab11/order_page.html
+++ b/Lab11/order_page.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body
+<body>
     <form name="quantity_form" action="display_purchase.html" method="GET" >
     <label>quantity desired: </label>
     <input type="text" name="qty_textbox1" onkeyup="checkQuantityTextbox(this);">
