--- a/Lab11/order_page.html
+++ b/Lab11/order_page.html
@@ -30,12 +30,20 @@
                 if(q < 0) errors.push('Negative value!'); 
                     if(parseInt(q) != q) errors.push('Not an integer!'); 
     }   
+
     return (returnErrors ? errors : (errors.length == 0));
-}
+    }
+
     // checks to display only positive integers 
     var displayPurchase = function() {
         if(isNonNegInt(qty_textbox1) == true) {
-        document.write(`Thank your for purchasing ${qty_textbox1.value} things!`)
+            window.location.href = "display_purchase.html" + document.location.search;
+            (`Thank your for purchasing ${qty_textbox1.value} things!`)
+        }
     }
-}
+
+    if (params.has('quantity_textbox')) {
+        quantity_form["quantity_textbox"].value = params.get('quantity_textbox');
+        checkQuantityTextbox(quantity_form["quantity_textbox"]);
+    }
 </script>
