--- a/Lab11/display_purchase.html
+++ b/Lab11/display_purchase.html
@@ -1,28 +1,41 @@
-<script>
-    let params = (new URL(document.location)).searchParams;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script>
+        let params = (new URL(document.location)).searchParams;
 
-     // function checks for errors & non-negative integers 
-    function isNonNegInt(q, returnErrors=false) {
+        // function checks for errors & non-negative integers 
+        function isNonNegInt(q, returnErrors=false) {
         errors = []; 
-            if(Number(q) != q) errors.push('Not a number!'); 
-                else {
-                    if(q < 0) errors.push('Negative value!'); 
-                        if(parseInt(q) != q) errors.push('Not an integer!'); 
-     }   
+        if(Number(q) != q) errors.push('Not a number!'); 
+             else {
+                if(q < 0) errors.push('Negative value!'); 
+                     if(parseInt(q) != q) errors.push('Not an integer!'); 
+        }   
 
-    return (returnErrors ? errors : (errors.length == 0));
-    }
-
-    // loop to check if input is valid
-    if(params.has('qty_textbox1') ) { 
-        // Ordered Items
-        if(isNonNegativeInteger(params.get('qty_textbox1'))) {
-            document.body.innerHTML = `Thank for you for ordering ${params.get('qty_textbox1')} items`;
-        } 
-        else {
-        // Invalid Orders
-        document.body.innerHTML = `Invalid quantity. Press the back button and try again.`;
+        return (returnErrors ? errors : (errors.length == 0));
         }
-    }
+    </script>
+</head>
+<body>
+    <script>
+        // loop to check if input is valid
+        if(params.has('qty_textbox1') ) { 
+            // Ordered Items
+            if(isNonNegativeInteger(params.get('qty_textbox1'))) {
+                document.body.innerHTML = `Thank for you for ordering ${params.get('qty_textbox1')} items`;
+            } 
+            else {
+            // Invalid Orders
+            document.body.innerHTML = `Invalid quantity. Press the back button and try again.`;
+            }
+        }
+    
+    </script>
+</body>
+</html>
 
-</script>
