--- a/Lab11/display_purchase.html
+++ b/Lab11/display_purchase.html
@@ -26,7 +26,7 @@
         // loop to check if input is valid
         if(params.has('qty_textbox1') ) { 
             // Ordered Items
-            if(isNonNegativeInteger(params.get('qty_textbox1'))) {
+            if(isNonNegInt(params.get('qty_textbox1'))) {
                 document.body.innerHTML = `Thank for you for ordering ${params.get('qty_textbox1')} items`;
             } 
             else {
