--- a/Sebastian_Nicholas_Assignment1/public/invoice.html
+++ b/Sebastian_Nicholas_Assignment1/public/invoice.html
@@ -1,1 +1,146 @@
 <script src="./products_data.js" type="text/javascript"></script>
+
+<script>
+    // Get params 
+    // From lab 11
+    let params = (new URL(document.location)).searchParams;
+    
+    // Get quantities
+    var quantity = [];
+
+    // Invoice submission
+    // If the params has been met then parse 
+    if (params.has(`quantity`)){
+        quantity=JSON.parse(params.get(`quantity`))
+    }
+
+    // From lab 11
+    // Checks for errors 
+    function isNonNegInt(q, returnErrors=false) {
+        errors = []; 
+        if(Number(q) != q) errors.push('Not a number!'); 
+            else {
+                if(q < 0) errors.push('Negative value!'); 
+                    if(parseInt(q) != q) errors.push('Not an integer!'); 
+        }   
+
+        return (returnErrors ? errors : (errors.length == 0));
+        }
+</script>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Invoice</title>
+    <link rel="stylesheet" href="./invoice.css">
+</head>
+<body>
+    <div>
+        <table border="2">
+            <tbody>
+                <tr>
+                    <th style="text-align: center;" width="43%">Item</th>
+                    <th style="text-align: center;" width="11%">Quantity</th>
+                    <th style="text-align: center;" width="11%">Price</th>
+                    <th style="text-align: center;" width="54%">Extended Price</th>
+                </tr>
+                    <script>
+                    // Invoice Table layout
+                    // Borrowed from Lab 8 
+                    subtotal = 0; // Compute subtotal
+                            for (i = 0; i < products_array.length; i++) {
+                                if (quantities[i] > 0) { 
+                                    // extended price calculation
+                                    extended_price = quantities[i] * products_array[i].price
+                                    // total cost
+                                    total = extended_price + subtotal; 
+                                    // Writes out the products and infomation back
+                                    document.write(` 
+                                        <tr>
+                                            <td width="43%">${products_array[i].name}</td>
+                                            <td align="center" width="11%">${quantity[i]}</td>
+                                            <td width="13%">&#165;${products_array[i].price}</td>
+                                            <td width="54%">&#165;${extended_price.toFixed(0)}</td>
+                                        </tr>
+                                    `);
+                                }
+                            }
+                        
+                        // Section to calculate tax and shipping
+                        // Tax calculation
+                        var tax = 0.05731
+                        var tax_total = tax*total
+                        // Shipping loop
+                        // Under $80, $0 fee
+                        if (total <= 80) {
+                            shipping = 0;
+                        }
+                            // Under $120, $20 fee
+                            if (total <=120){
+                                shipping = 20;
+                            }
+                                // Under $300, $30 fee
+                                if (total <=300) {
+                                    shipping = 30;
+                                        // Default 4.5 shipping
+                                        }else{
+                                            shipping = 4.5*total;
+                                        }
+                        // Total of total, tax, and shipping
+                        var payment = total + tax_total + shipping;
+                </script>
+
+            <tr>
+                <td colspan="4" width="100%">&nbsp;</td>
+            </tr>
+
+                <script>
+                    // Document write to the table 
+                    // Borrowed from Lab 8
+
+                    // Write Subtotal
+                    document.write(`
+                    <tr>
+                    <td style="text-align: center;" colspan="3" width="67%">Subtotal</td>
+                    <td width="54%">&#165;${subtotal.toFixed(0)}</td>
+                    </tr>
+                    `)
+
+                    // Write Tax
+                    document.write(`
+                    <tr>
+                    <td style="text-align: center;" colspan="3" width="67%">Subtotal</td>
+                    <td width="54%">&#165;${tax.toFixed(0)}</td>
+                    </tr>
+                    `)
+
+                    // Write Shipping
+                    document.write(`
+                    <tr>
+                    <td style="text-align: center;" colspan="3" width="67%">Subtotal</td>
+                    <td width="54%">&#165;${shipping.toFixed(0)}</td>
+                    </tr>
+                    `)
+
+                    // Write Total
+                    document.write(`
+                    <tr>
+                    <td style="text-align: center;" colspan="3" width="67%">Subtotal</td>
+                    <td width="54%">&#165;${total.toFixed(0)}</td>
+                    </tr>
+                    `)
+                </script>
+            </tbody>
+        </table>
+    </div>
+<script>
+    // Shipping policy on the bottom of invoice
+    // Button to go back to the products page
+</script>
+
+<input type="button" class="button" value="Back to Home" onclick="window.location.href = 'products_display.html';">
+</body>
+</html>
