--- a/Sebastian_Nicholas_Assignment1/public/products_display.html
+++ b/Sebastian_Nicholas_Assignment1/public/products_display.html
@@ -8,7 +8,8 @@
     
     <title>Shoe Shop</title>
 
-    <script src="./product_data.js"></script>
+    <link rel="stylesheet" href="./products.css">
+    <script src="products_data.js" type="text/javascript"></script>
 
     <script>
         // NonNegInt Function from lab 11
@@ -29,7 +30,31 @@
         }
 
         // function to check for valid/invalid quantity input
+        // From Lab 12
+        function checkQuantityTextbox(qtyTextbox) {
+        qtyerr = isNonNegInt(qtyTextbox.value, true);
+            if (qtyerr.length == 0) errs = ['You want: '];
+            if (qtyTextbox.value.trim() == '') qtyerr = ['Please type quantity desired: '];
+        document.getElementById(qtyTextbox.name + '_label').innerHTML = qtyerr.join('<font color="red">, </font>');
+        }
 
+        window.onload = function () {
+        let params = (new URL(document.location)).searchParams;
+        // Makes an alert with error message
+        if (params.has("errorMessage")) {
+            alert(params.get("errorMessage"));
+        }
+        // Code borrowed and modified from Lab 12
+        // Makes textboxes sticky for invalid data
+        for (i = 0; i < product_data.length; i++) {
+            if (params.has(`quantity${i}`)) {
+                quantity_input = params.get(`quantity${i}`);
+                quantity_form[`quantity${i}`].value = quantity_input;
+                // Shows where the error is
+                checkQuantityTextbox(quantity_form[`quantity${i}`]); 
+            }
+        }
+    }
     </script>
 </head>
 
@@ -39,17 +64,32 @@
             <script>
                 // This section loads the products from product_data.js file
                 // For loop of products
-         
+                for(i = 0; i < product_data.length; i++) {
+                document.write(`
+                    <section class="item_display"><br><img src="${product_data[i].image}" align="left"></br></section>
+                    <section class="item_text">
+                        <p>
+                            <br><h2>${product_data[i].brand}</h2></br>
+                            <br>${product_data[i].desc}</br>
+                            <br>Stock: ${product_data[i].quantity}</br>
+                            <br><b>$${product_data[i].price}</b></br>
+                            <br>
+                                <label id="quantity${i}_label">Please type quantity desired: </label>
+                                <input type="text" placeholder="Quantity Available: ${product_data[i].quantity}" name="quantity${i}" onkeyup="checkQuantityTextbox(this);">
+                            </br>
+                        </p>
+                    </section>
+                `)
+            }
             </script>
         </main>
     </div>
    
-
    <div>
        <footer>
-           <h2>Page by: Nicholas Sebatian @ 2022</h2>
+           <h3>Page by: Nicholas Sebatian @ 2022</h3>
        </footer>
    </div>
-
+   
 </body>
 </html>
