--- a/Sebastian_Nicholas_Assignment1/public/products_display.html
+++ b/Sebastian_Nicholas_Assignment1/public/products_display.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
+    <script src="products_data.json" type="text/javascript"></script>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Shoe Shop</title>
+    <title>Shoe Shop Products</title>
 
     <link rel="stylesheet" href="./products.css">
-    <script src="products_data.js" type="text/javascript"></script>
+    
 
     <script>
         // NonNegInt Function from lab 11
