--- a/Sebastian_Nicholas_Assignment1/public/invoice.html
+++ b/Sebastian_Nicholas_Assignment1/public/invoice.html
@@ -6,7 +6,7 @@
   let params = (new URL(document.location)).searchParams;
 </script>
 
-<script src="products_data.js"></script>
+<script src="/products_data.json"></script>
 
 <script>
     //  If params has a valid quantity then parse
