--- a/Sebastian_Nicholas_Assignment1/public/products_display.html
+++ b/Sebastian_Nicholas_Assignment1/public/products_display.html
@@ -25,9 +25,10 @@
 	}
 
 // Borrowed from lab 12
+// Prevents user from moving to invoice page
 function isNonNegInt(q, return_errors = false) {
-        errors = []; // assume no errors at first
-        if (q == '') q = 0; // handle blank inputs as if they are 0
+        errors = []; // No Errors
+        if (q == '') q = 0; // Returns to page if input is 0
             if (Number(q) != q) errors.push('<font color="red">Not a number!</font>'); // Check if string is a number value
                 else if (q > 10) errors.push('<font color="red">Only 10 in stock</font>');
                     else if (q == 0) errors.push('<font color="red">Please select!</font>');
