--- a/Sebastian_Nicholas_Assignment1/public/products_display.html
+++ b/Sebastian_Nicholas_Assignment1/public/products_display.html
@@ -74,7 +74,7 @@ function isNonNegInt(q, return_errors = false) {
                                 document.write(`
                                 <section class="item">
                                     <h1>${products[i].brand}</h1>
-                                    <h2>${products[i].name}</h>
+                                    <h3>${products[i].name}</h3>
                                     <img src=${products[i].image}>
                                     <h2>$${products[i].price}</h2>
 									<label id="quantity${i}_label">${products[i].quantity} in stock</label>
