--- a/Sebastian_Nicholas_Assignment1/public/products_display.html
+++ b/Sebastian_Nicholas_Assignment1/public/products_display.html
@@ -52,13 +52,13 @@ function isNonNegInt(q, return_errors = false) {
         <div class="inner">
         <h1>Shoe Locker</h1>
         <!-- Form for the order page -->
-        <form name="order_form" action="./process_form" method="POST"></form>
+        <form name="order_form" action="./invoice" method="POST"></form>
     </div>
 </header>
 
     <div id="Shoes">
             <!-- Form to post to the invoice page -->
-            <form name="quantity_form" action="./process_form" method="post">
+            <form name="quantity_form" action="./invoice" method="post">
                 <div>
                     <main>
                         <script>
