--- a/Sebastian_Nicholas_Assignment2/public/products_display.html
+++ b/Sebastian_Nicholas_Assignment2/public/products_display.html
@@ -1,6 +1,7 @@
 <!--Nicholas Sebatian-->
 <!--Loads product array from json file-->
 <script src="/products_data.json"></script>
+
 <!DOCTYPE html>
 <html>
     <script>
@@ -25,62 +26,115 @@
 		}
 	}
 
-// Borrowed from lab 12
-// Prevents user from moving to invoice page
-function isNonNegInt(q, return_errors = false) {
-        errors = []; // No Errors
-        if (q == '') q = 0; // Returns to page if input is 0
-            if (Number(q) != q) errors.push('<font color="red">Not a number!</font>'); // Checks if string is a number value
-                        else if (q < 0) errors.push('<font color="red">Negative value!</font>'); // Checks if it is non-negative
-                            else if (parseInt(q) != q) errors.push('<font color="red">Not an integer!</font>'); // Checks that it is an integer
+    // Borrowed from lab 12
+    // Prevents user from moving to invoice page
+    function isNonNegInt(q, return_errors = false) {
+            errors = []; // No Errors
+            if (q == '') q = 0; // Returns to page if input is 0
+                if (Number(q) != q) errors.push('<font color="red">Not a number!</font>'); // Checks if string is a number value
+                            else if (q < 0) errors.push('<font color="red">Negative value!</font>'); // Checks if it is non-negative
+                                else if (parseInt(q) != q) errors.push('<font color="red">Not an integer!</font>'); // Checks that it is an integer
 
-        return return_errors ? errors : (errors.length == 0);
+            return return_errors ? errors : (errors.length == 0);
     }
 	</script>
 <head>
-    <meta charset="utf-8">
-    <title>Shoe Store Products</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--Link to products.css -->
-    <link href="./products.css" rel="stylesheet">
-</head>
+<title>Shoe Store Products</title>
+<meta charset="UTF-8">
 
+<!-- Borrowed a template from W3 schools -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
+<style>
+body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
+.w3-bar-block .w3-bar-item {padding:20px}
+</style>
+</head>
 <body>
-    <header id="header">
-        <div class="inner">
-        <h1>Shoe Locker</h1>
-        <!-- Form for the order page -->
-        <form name="order_form" action="./process_form" method="POST"></form>
-    </div>
-</header>
+
+<!-- Sidebar (hidden by default) -->
+<nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
+  <a href="javascript:void(0)" onclick="w3_close()"
+  class="w3-bar-item w3-button">Shoe Locker</a>
+  
+  <!-- Side Panel short cuts to different pages -->
+  <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">Index</a>
+  <a href="register.html" onclick="w3_close()" class="w3-bar-item w3-button">Register</a>
+  <a href="login.html" onclick="w3_close()" class="w3-bar-item w3-button">Login</a>
+</nav>
+
+<!-- Top menu -->
+<div class="w3-top">
+  <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
+    <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
+    <div class="w3-center w3-padding-16">Shoe Locker</div>
+  </div>
+</div>
+  
+<!-- !PAGE CONTENT! -->
+<div class="w3-main w3-content w3-padding" style="max-width:1000px; margin-top:100px">
+
     <div id="Shoes">
-            <!-- Form to post to the invoice page -->
-            <form name="quantity_form" action="./process_form" method="post">
-                <div>
-                    <main>
-                        <script>
-                            for (i = 0; i < products.length; i++) {
-                                // Layout of products on the page.
-                                document.write(`
-                                <section class="item">
-                                    <h2>${products[i].brand}</h2>
-                                    <h3>${products[i].name}</h3>
-                                    <img src=${products[i].image}>
-                                    <h2>$${products[i].price}</h2>
-									<label id="quantity${i}_label">${products[i].quantity} pairs avaliable</label>
-									<input type="text" placeholder="Amount" name="quantity[${i}]">  
-                                </section>
-                                `); }
-                        </script>
-                    </main>
-                </div>
-                    <!--Button to submit to the invoice-->
-                    <br><input type="submit" class="button" value="Cart" id="submit" name="purchase_submit">
-                </form>
-    <!-- Credentials-->
-    <footer>
-        Nicholas Sebastian, 2022
+        <!-- Form to post to the invoice page -->
+        <form name="quantity_form" action="./process_form" method="post">
+            <div>
+                <main>
+                    <script>
+                        for (i = 0; i < products.length; i++) {
+                            // Layout of products on the page.
+                            document.write(`
+                            <section class="item">
+                                <h2>${products[i].brand}</h2>
+                                <h3>${products[i].name}</h3>
+                                <img src=${products[i].image}>
+                                <h2>$${products[i].price}</h2>
+                                <label id="quantity${i}_label">${products[i].quantity} pairs avaliable</label>
+                                <input type="text" placeholder="Amount" name="quantity[${i}]">  
+                            </section>
+                            `); }
+                    </script>
+                </main>
+            </div>
+                <!--Button to submit to the invoice-->
+                <br><input type="submit" class="button" value="Cart" id="submit" name="purchase_submit">
+            </form>
+  
+  <hr id="about">
+
+    <!-- About Section -->
+    <div class="w3-container w3-padding-32 w3-center">  
+        <h4><b>Shipping information</b></h4>
+        <h6><i></i></h6>
+        <p>Purchases under $50 will be a $15 shipping fee.</p>
+        <p>Purchases under $100 will be $25 shipping fee.</p>
+        <p>Purhcases above $100 will have a 5% shipping fee.</p>
+        </div>
+    </div>
+    <hr>
+    
+    <!-- Footer -->
+    <footer class="w3-row-padding w3-padding-32">
+        <div class="w3-third">
+        <h3>Nicholas Sebastian, 2022 </h3>
+        <p>Assignemnt 2</p>
+        <p>ITM-352</p>
+        <p>Dainel Port</p>
+        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+        </div>
     </footer>
-</body>
+
+    <!-- End page content -->
+    </div>
+        <script>
+        // Script to open and close sidebar
+        function w3_open() {
+        document.getElementById("mySidebar").style.display = "block";
+        }
+        
+        function w3_close() {
+        document.getElementById("mySidebar").style.display = "none";
+        }
+        </script>
+    </body>
 </html>
