--- a/Sebastian_Nicholas_Assignment2/public/invoice.html
+++ b/Sebastian_Nicholas_Assignment2/public/invoice.html
@@ -176,7 +176,7 @@
         </div>
     <br>
           <!-- Button that allows the user to go back to the products page -->
-          <input type="button" class="button" value="Back To Store" onclick="window.location.href = 'products_display.html';">
+          <input type="button" class="button" value="Back To Store" onclick="window.location.href = 'index.html';">
     <br>
     <!-- Credentials -->
         <footer>
